--- a/.classpath
+++ b/.classpath
@@ -14,6 +14,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="webroot/WEB-INF/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="webroot/WEB-INF/lib/mysql-connector-java-5.1.26.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
